// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flatten seam golden — picoFromFile output broken/Air: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 11,
        "bbox": Array [
          7.25,
          11.25,
          14.75,
          12.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 27,
        "bbox": Array [
          4.25,
          3.25,
          19.75,
          9.75,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 27,
        "bbox": Array [
          3.25,
          14.25,
          19.75,
          19.75,
        ],
        "contours": 2,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output broken/Alarm: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 12,
        "bbox": Array [
          11.25,
          8.25,
          14.75,
          15.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 69,
        "bbox": Array [
          3.25,
          4.25,
          20.75,
          21.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          17.25,
          2.25,
          21.75,
          6.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          2.25,
          2.25,
          6.75,
          6.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output clippath/teest: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "rgba(0,0,0,0.3)",
      "fillRule": null,
      "shape": Object {
        "area": 209,
        "bbox": Array [
          5,
          5,
          19,
          19,
        ],
        "contours": 3,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 109,
        "bbox": Array [
          3,
          3,
          21,
          21,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 38,
        "bbox": Array [
          6,
          9,
          16,
          15,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "red",
      "fillRule": null,
      "shape": Object {
        "area": 0,
        "bbox": Array [
          23,
          4,
          23,
          4,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output curved/Air: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 11,
        "bbox": Array [
          7.25,
          11.25,
          14.75,
          12.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 32,
        "bbox": Array [
          4.25,
          3.25,
          19.75,
          9.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 31,
        "bbox": Array [
          3.25,
          14.25,
          19.75,
          19.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output curved/Alarm: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 12,
        "bbox": Array [
          11.25,
          8.25,
          14.75,
          15.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 407,
        "bbox": Array [
          3.25,
          4.25,
          20.75,
          21.75,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          17.25,
          2.25,
          21.75,
          6.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          2.25,
          2.25,
          6.75,
          6.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output duotone/Alarm: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "rgba(0,26,114,0.15)",
      "fillRule": null,
      "shape": Object {
        "area": 201,
        "bbox": Array [
          4,
          5,
          20,
          21,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 12,
        "bbox": Array [
          11.25,
          8.25,
          14.75,
          15.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 407,
        "bbox": Array [
          3.25,
          4.25,
          20.75,
          21.75,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          17.25,
          2.25,
          21.75,
          6.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          2.25,
          2.25,
          6.75,
          6.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output duotone/Dislike: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "rgba(0,26,114,0.15)",
      "fillRule": null,
      "shape": Object {
        "area": 151,
        "bbox": Array [
          8,
          4,
          20.56,
          20.76,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 17,
        "bbox": Array [
          7.25,
          3.25,
          8.75,
          14.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 386,
        "bbox": Array [
          3.25,
          3.25,
          21.32,
          21.53,
        ],
        "contours": 2,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output duotone/EyeOpen: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "rgba(0,26,114,0.15)",
      "fillRule": null,
      "shape": Object {
        "area": 222,
        "bbox": Array [
          2,
          5,
          22,
          19,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 391,
        "bbox": Array [
          1.25,
          4.25,
          22.75,
          19.75,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 64,
        "bbox": Array [
          8.25,
          8.25,
          15.75,
          15.75,
        ],
        "contours": 2,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output evenodd/barcode: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 132,
        "bbox": Array [
          2,
          6,
          22,
          18,
        ],
        "contours": 8,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output evenodd/qrcode: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 136,
        "bbox": Array [
          1,
          1,
          11,
          11,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 4,
        "bbox": Array [
          5,
          5,
          7,
          7,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 136,
        "bbox": Array [
          13,
          1,
          23,
          11,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 4,
        "bbox": Array [
          17,
          5,
          19,
          7,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 136,
        "bbox": Array [
          1,
          13,
          11,
          23,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 4,
        "bbox": Array [
          5,
          17,
          7,
          19,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 52,
        "bbox": Array [
          13,
          13,
          23,
          23,
        ],
        "contours": 2,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output opacity/10k: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "rgba(0,0,0,0.3)",
      "fillRule": null,
      "shape": Object {
        "area": 11,
        "bbox": Array [
          10,
          9,
          19,
          15,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "rgba(0,0,0,0.3)",
      "fillRule": null,
      "shape": Object {
        "area": 186,
        "bbox": Array [
          5,
          5,
          19,
          19,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 506,
        "bbox": Array [
          3,
          3,
          21,
          21,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 50,
        "bbox": Array [
          8.5,
          9,
          19,
          15,
        ],
        "contours": 3,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output outline/Air: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 11,
        "bbox": Array [
          7.25,
          11.25,
          14.75,
          12.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 32,
        "bbox": Array [
          4.25,
          3.25,
          19.75,
          9.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 31,
        "bbox": Array [
          3.25,
          14.25,
          19.75,
          19.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output outline/Alarm: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 12,
        "bbox": Array [
          11.25,
          8.25,
          14.75,
          15.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 407,
        "bbox": Array [
          3.25,
          4.25,
          20.75,
          21.75,
        ],
        "contours": 2,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          17.25,
          2.25,
          21.75,
          6.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 8,
        "bbox": Array [
          2.25,
          2.25,
          6.75,
          6.75,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output outline/ArrowCircleDown: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 17,
        "bbox": Array [
          11.25,
          6.25,
          12.75,
          17.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 19,
        "bbox": Array [
          7.25,
          12.25,
          16.75,
          17.75,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": "#001A72",
      "fillRule": null,
      "shape": Object {
        "area": 514,
        "bbox": Array [
          2.25,
          2.25,
          21.75,
          21.75,
        ],
        "contours": 2,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;

exports[`flatten seam golden — picoFromFile output sanitize/elephant: flattened output matches its frozen fingerprint 1`] = `
Object {
  "paths": Array [
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 1,
        "bbox": Array [
          19.5,
          9.75,
          21,
          12,
        ],
        "contours": 1,
      },
    },
    Object {
      "fill": null,
      "fillRule": null,
      "shape": Object {
        "area": 103,
        "bbox": Array [
          0,
          0.37,
          24,
          24,
        ],
        "contours": 1,
      },
    },
  ],
  "viewBox": Array [
    0,
    0,
    24,
    24,
  ],
}
`;
